# varqite-defi-collateral

./: .gitignore  README.md  labels.npy  pyproject.toml  requirements.txt
docs/: PROOF_OF_CONCEPT_REPLICATION_GUIDE.md  prompts.md  simulation-real-conversion.md
examples/: fetch_positions_example.py
src/: aave_positions_20250622_072800.csv  labels.npy
src/qcollat_simplifier/: __init__.py  benchmark.py  build_graph.py  cli.py  config.py  fetch_aave_positions.py  proof_of_concept_summary.py  stress_local.py  test_subgraph.py  varqite_partition.py  varqite_partition_fast.py  varqite_partition_simple.py
