[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcollat-simplifier"
version = "0.1.0"
description = "A quantum collateral simplifier project"
authors = [
    {name = "Thomas Bale", email = "tokbale@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "qiskit==0.45.2",
    "qiskit-algorithms==0.2.2",
    "qiskit-aer==0.13.3",
    "qiskit-ionq==0.4.0",
    "networkx==3.2.1",
    "numpy==1.24.4",
    "scipy==1.11.4",
    "pandas==2.1.4",
    "gql==3.5.0",
    "graphql-core==3.2.3",
    "matplotlib==3.8.2",
    "plotly==5.17.0",
    "streamlit==1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 